Add GC startup parameters
Signed-off-by: Zzm0809 <934230207@qq.com>